--- a/backend/env.example
+++ b/backend/env.example
@@ -1,5 +1,12 @@
-﻿PORT=3000
+PORT=3000
 FRONTEND_URL=http://localhost:5173
+
+# CORS 配置（多个域名用逗号分隔）
+# 生产环境示例：ALLOWED_ORIGINS=https://chain-develop.dnsdnsmeme.workers.dev,https://*.pages.dev
+ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1,http://127.0.0.1:80,http://localhost:80
+
+# 是否允许所有 Cloudflare Pages/Workers 域名（生产环境建议开启）
+ALLOW_CLOUDFLARE_DOMAINS=false
 
 AI_API_BASE_URL=https://api.deepseek.com
 AI_API_KEY=your-deepseek-api-key
