--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:blog\"",
+    "dev:frontend": "cd frontend && npm run dev",
+    "dev:blog": "cd docs && npm run start",
     "build": "next build",
+    "build:frontend": "cd frontend && npm run build",
+    "build:blog": "cd docs && npm run build",
+    "build:merge": "npm run build:frontend && npm run build:blog && node scripts/merge-builds.js",
+    "build:cloudflare": "npm run build:merge",
     "start": "next start",
     "lint": "eslint ."
   },
