--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "dev:frontend": "cd frontend && npm run dev",
     "dev:blog": "cd docs && npm run start",
     "build": "npm run build:cloudflare",
-    "build:frontend": "cd frontend && npm run build",
-    "build:blog": "cd docs && npm run build",
+    "build:frontend": "cd frontend && npm install && npm run build",
+    "build:blog": "cd docs && npm install && npm run build",
     "build:merge": "npm run build:frontend && npm run build:blog && node scripts/merge-builds.js",
     "build:cloudflare": "npm run build:merge"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "fs-extra": "^11.2.0"
   }
 }
