--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
+    "rollup": "^4.27.4",
     "tailwindcss": "^3.4.0",
     "vite": "^5.0.8",
     "vite-react-ssg": "^0.8.9"
