--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
-{  "name": "chain-develop",
+{
+  "name": "chain-develop",
   "version": "0.1.0",
   "private": true,
-  "workspaces": [
-    "frontend",
-    "docs"
-  ],
   "scripts": {
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:blog\"",
     "dev:frontend": "cd frontend && npm run dev",
