--- a/docs/blog/authors.yml
+++ b/docs/blog/authors.yml
@@ -2,7 +2,7 @@ buildweb3:
   name: BuildWeb3 Team
   title: Web3 Development Experts
   url: https://buildweb3.com
-  image_url: /img/Color logo - no background.svg
+  image_url: https://buildweb3.io/logo_no_background.svg
   page: false
 
 yangshun:
